<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="Doctor">Doctor</string>
    <string name="Volunteer">Volunteer</string>
    <string name="patient">patient</string>
    <string name="EmCall">EmCall</string>
    <string name="HeatMap">Heat-Map</string>
    <string name="QRCode">QRCode</string>
    <string name="family_friends"><![CDATA[Family & Friends]]></string>
    <string name="Settings">Settings</string>
    <string name="LogOut">Log Out</string>
    <string name="app_name">navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>