<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.side.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_Doctor"
        android:name="com.example.side.ui.doctor.DoctorFragment"
        android:label="@string/Doctor"
        tools:layout="@layout/fragment_doctor" />

    <fragment
        android:id="@+id/nav_Volunteer"
        android:name="com.example.side.ui.volunteer.VolunteerFragment"
        android:label="@string/Volunteer"
        tools:layout="@layout/fragment_volunteer" />
    <fragment
        android:id="@+id/nav_patient"
        android:name="com.example.side.ui.patient.PatientFragment"
        android:label="@string/patient"
        tools:layout="@layout/fragment_patient" />
    <fragment
        android:id="@+id/nav_Pharmacies"
        android:name="com.example.side.ui.pharmacies.PharmaciesFragment"
        android:label="Pharmcies"
        tools:layout="@layout/fragment_pharmacies" />

    <fragment
        android:id="@+id/nav_Hospitals"
        android:name="com.example.side.ui.hospital.HospitalFragment"
        android:label="Hospitals"
        tools:layout="@layout/fragment_hospital" />


    <fragment
        android:id="@+id/nav_HeatMap"
        android:name="com.example.side.ui.heatmap.HeatmapFragment"
        android:label="Heat_Map"
        tools:layout="@layout/fragment_heatmap" />
    <fragment
        android:id="@+id/nav_QRCode"
        android:name="com.example.side.ui.qr.QrFragment"
        android:label="@string/QRCode"
        tools:layout="@layout/fragment_qr" />
    <fragment
        android:id="@+id/nav_Family"
        android:name="com.example.side.ui.family.FamilyFragment"
        android:label="@string/family_friends"
        tools:layout="@layout/fragment_family" />
    <fragment
        android:id="@+id/nav_Settings"
        android:name="com.example.side.ui.setting.SettingFragment"
        android:label="@string/Settings"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_LogOut"
        android:name="com.example.side.ui.logout.LogOutFragment"
        android:label="@string/LogOut"
        tools:layout="@layout/fragment_logout" />
</navigation>